<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/redbg" >

    <ScrollView
        android:id="@+id/Scrollview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rlayout02"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/user_name"
                android:layout_width="230dp"
                android:layout_height="45dp"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/phonebg"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/username"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" >
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="230dp"
                android:layout_height="45dp"
                android:layout_below="@+id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/passbg"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="50dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <CheckBox
                android:id="@+id/keeploggedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/keeploggedin"
                android:textColor="#ffffff" />

            <RelativeLayout
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/user_name"
                android:layout_below="@+id/imageView1"
                android:layout_marginTop="32dp" >

                <ImageView
                    android:id="@+id/arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="changeLang"
                    android:src="@drawable/arlanguage" />
            </RelativeLayout>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/language"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@color/yellow"
                android:onClick="login"
                android:text="@string/enter"
                android:textColor="@color/redbg" />

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/keeploggedin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/forgotpass"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotpassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/sublogologin" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>