<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gris"
    android:baselineAligned="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris"
            android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:paddingBottom="18dp"
            android:paddingTop="18dp" >

            <Button
                android:id="@+id/addresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/turquoise"
                android:text="@string/addresses"
                android:textColor="@color/bluebg" />

            <TextView
                android:id="@+id/textView1"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluebg"
                android:text="@string/username" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:ellipsize="start"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#bdbdbd"
                android:textColorHint="#bdbdbd"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bluebg"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:ellipsize="start"
                android:ems="10"
                android:hint="@string/name"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#bdbdbd"
                android:textColorHint="#bdbdbd"
                android:textSize="16sp" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                android:textColor="@color/bluebg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:ellipsize="start"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#bdbdbd"
                android:textColorHint="#bdbdbd"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:textColor="@color/bluebg"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retypepass" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbg"
                android:ellipsize="start"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#bdbdbd"
                android:textColorHint="#bdbdbd"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/languageSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp" />

            <CheckBox
                android:id="@+id/keeploggedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/keeploggedin"
                android:textColor="#818281"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/submit"
            android:background="@color/turquoise"
            android:textColor="@color/bluebg"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>